[project]
name = "API"
version = "1.5.0"
requires-python = ">=3.8,<3.15"
description = "Python programming interface for controlling RoboPro RC series collaborative robots"
maintainers = [
    {name = "Maxim Kozlov", email = "maksim.kozlov@robopro.pro"}
]
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = [
    "numpy>=1.21.0",
    "pymodbus>=3.0.0",
    "scipy>=1.10.0",
    "typing-extensions>=4.13.0",
]

[build-system]
requires = ["setuptools >= 61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["API*", "robot_api_tools*"]
exclude = ["tests*", "examples*", "data*"]

[project.scripts]
api-generate-monolith = "robot_api_tools.generate_monolith:main"
api-generate-keywords = "robot_api_tools.generate_keywords:main"

[tool.ruff] 
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "codegen",
    "typings",
]

# Same as Black.
line-length = 79
indent-width = 4

target-version = "py38"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["UP", "E4", "E7", "E9", "F", "W", "C901"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.pyright]
include = ["API", "examples", "tests", "robot_api_tools"]
exclude = ["**/__pycache__", "**/codegen"]
pythonVersion = "3.8"
reportDeprecated = "warning"

typeCheckingMode = "standard"
stubPath = "./typings/"

[dependency-groups]
dev = [
    "api",
    "debugpy>=1.8.14",
    "pdoc>=14.0.0",
    "pre-commit>=3.5.0",
    "pyright>=1.1.400",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.11.7",
]

[tool.uv]
package = true
